--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
+@font-face {
+  font-family: Pokemon-Hollow;
+  src: url(Pokemon_Hollow.ttf);
+}
+
 body {
-  background-image: url("pokeball-background.webp");
+  background-image: url("pokeball-background.jpg");
 }
 
 .main-content {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 .buttonImg {
@@ -13,8 +19,10 @@ body {
 }
 
 .title {
+  font-family: Pokemon-Hollow;
   display: flex;
   justify-content: center;
+  color: black;
 }
 
 #game-container {
@@ -49,7 +57,7 @@ body {
 .score,
 #score-title {
   font-size: 32px;
-  color: white;
+  color: black;
 }
 
 #name-title-container {
@@ -67,8 +75,8 @@ body {
   align-items: center;
   height: 96px;
   width: 96px;
-  background-color: black;
-  border: 2px solid white;
+  background-color: white;
+  border: 2px solid black;
 }
 
 .btn-container {
@@ -76,4 +84,43 @@ body {
   height: 275px;
   border: 2px solid white;
   margin: 8px;
+}
+
+#battle-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+#rival-image {
+  width: 300px;
+  height: 300px;
+}
+
+.battle-slot {
+  display: flex;
+  align-items: center;
+}
+
+#battle-slot-container {
+  display: flex;
+  width: 75%;
+  justify-content: space-between;
+}
+
+#player-battle-slot {
+  margin-left: 30%;
+}
+
+.pokeball-img {
+  width: 100px;
+  height: 100px;
+}
+
+#results-container {
+  width: 800px;
+  height: 75px;
+  background-color: white;
+  border: 2px solid black;
+  margin-top: 24px;
 }
