--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 
 @font-face {
-  font-family: arcade-classic;
+  font-family: pixeboy;
   src: url(pixeboy-z8XGD.ttf);
 }
 body {
@@ -59,6 +59,8 @@ body {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  font-family: pixeboy;
+  font-size: 24px;
 }
 
 /* The Close Button */
@@ -219,6 +221,23 @@ body {
 
 #results-text {
   margin: auto;
-  font-family: arcade-classic;
+  font-family: pixeboy;
   font-size: 32px;
+}
+
+#rival-text-container {
+  display: flex;
+  width: 400px;
+  height: 50px;
+  background-color: white;
+  border: 2px solid black;
+  margin-top: 16px;
+  position: absolute;
+  right: 200px;
+}
+
+#rival-text {
+  margin: auto;
+  font-family: pixeboy;
+  font-size: 24px;
 }
