Add Relative Links for Fonts

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: pixeboy;
-  src: url(/pixeboy-z8XGD.ttf);
+  src: url(/Pixeboy-z8XGD.ttf);
 }
 body {
   background-image: url("pokeball-background.jpg");
